backend/server.log
+ exec gosu vibecode scripts/start --hot
Installing dependencies and generating Prisma client...
[0.03ms] ".env"
bun install v1.2.19 (aad3abea)

$ prisma generate
Environment variables loaded from .env
Prisma schema loaded from prisma/schema.prisma

✔ Generated Prisma Client (v6.17.1) to ./generated/prisma in 294ms

Start by importing your Prisma Client (See: https://pris.ly/d/importing-client)

Tip: Interested in query caching in just a few lines of code? Try Accelerate today! https://pris.ly/tip-3-accelerate


Checked 746 installs across 695 packages (no changes) [1.62s]
Starting server in dev mode with hot reload...
$ NODE_ENV=development bun run --hot src/index.ts
1 | (function (entry, fetcher)
              ^
SyntaxError: Missing 'default' export in module '/home/user/workspace/backend/node_modules/pdf-parse/dist/pdf-parse/esm/index.js'.
      at loadAndEvaluateModule (1:11)
1 | (function (entry, fetcher)
              ^
SyntaxError: Missing 'default' export in module '/home/user/workspace/backend/node_modules/pdf-parse/dist/pdf-parse/esm/index.js'.
      at loadAndEvaluateModule (1:11)
